--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,11 +70,11 @@
 
     .hero h1 {
         font-size: 2rem;
-        color: #A8E6CF;
+        color: #ffbd06;
     }
     .hero h2 {
         font-size: 1.5rem;
-        color: #A8E6CF;
+        color: #ffbd06;
     }
 
     .hero p {
